// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelComponent should create with content test 1`] = `
<gro-label>
  test
</gro-label>
`;

exports[`LabelComponent should create with content toto 1`] = `
<gro-label>
  toto
</gro-label>
`;
